--- a/Readme
+++ b/Readme
@@ -1,8 +1,35 @@
-Readme
+Readme for Markov Job Posting Generator
 
-Add instructions later
+Generates Markov Chain text based on data from Indeed.
+
+Hosted on Heroku at: 
+See description of project at: http://jeremyschembri.com/portfolio/markov-job-posting-generator/
+
+Resources
+
+Github
+https://github.com/jschembri/markovJobPostingGenerator
+
+Text Markov Generator:
+http://agiliq.com/blog/2009/06/generating-pseudo-random-text-with-markov-chains-u/
+http://www.yisongyue.com/shaney/
+http://projects.haykranen.nl/markov/demo/
+https://veekaybee.github.io/markov-in-python/
+
+Heroku
+https://devcenter.heroku.com/articles/getting-started-with-python#introduction
+http://blog.y3xz.com/blog/2012/08/16/flask-and-postgresql-on-heroku
+
+Flask
+http://flask.pocoo.org/docs/0.10/tutorial/
+http://blog.sahildiwan.com/posts/flask-and-postgresql-app-deployed-on-heroku/
+
+Job Posting API
+http://ca.indeed.com/publisher
+http://www.indeed.com/jsp/apiinfo.jsp
 
 
+Important Commands
 # To inialize db on local host do:
 # more information at: http://blog.sahildiwan.com/posts/flask-and-postgresql-app-deployed-on-heroku/
 #$ python
